# iwsq_entry_histrory

./: .gitignore  main.py  pyproject.toml  test.py
views/: entered.py  index.py  left.py  used_equipment.py
views/controls/: clock.py  csv_utils.py
